# deoxys_control

./: README.md
deoxys/: CMakeLists.txt  fetch_deps.sh  pyproject.toml  requirements.txt
deoxys/auto_scripts/: auto_arm.sh  auto_gripper.sh  fix_ld_issue.sh
deoxys/cmake/: protobuf.cmake
deoxys/config/: charmander-left.yml  charmander-right.yml
deoxys/deoxys/franka_interface/: franka_interface.py
deoxys/deoxys/proto/: sample_pb2.py
deoxys/deoxys/proto/franka_interface/: franka_controller_pb2.py  franka_robot_state_pb2.py
deoxys/deoxys/utils/: config_utils.py
